--- a/linux_version.yml
+++ b/linux_version.yml
@@ -5,6 +5,11 @@
   gather_facts: false
   hosts: servers
   tasks:
+
+    - name: Get config for VyOS devices
+      vyos.vyos.vyos_facts:
+        gather_subset: all
+
     - name: Display the config
       debug:
         msg: "The hostname is {{ ansible_net_hostname }} and the OS is {{ ansible_net_version }}"
