--- a/update-nvidia-grid-driver.yaml
+++ b/update-nvidia-grid-driver.yaml
@@ -18,4 +18,4 @@
         mode: '0777'
 
     - name: Start installatie NVIDIA GRID driver
-      action: shell sudo /tmp/nvidia-grid/NVIDIA-Linux-x86_64-535.161.08-grid.run
+      action: shell sudo /tmp/nvidia-grid/NVIDIA-Linux-x86_64-535.161.08-grid.run -q -a -n -X -s
