--- a/update-nvidia-grid-driver.yaml
+++ b/update-nvidia-grid-driver.yaml
@@ -19,3 +19,17 @@
 
     - name: Start installatie NVIDIA GRID driver (unattended = -q -a -n -X -s)
       action: shell sudo /tmp/nvidia-grid/NVIDIA-Linux-x86_64-535.161.08-grid.run -q -a -n -X -s
+
+    - name: Check if a reboot is required.
+      ansible.builtin.stat:
+        path: /var/run/reboot-required
+        get_checksum: no
+      register: reboot_required_file
+
+    - name: Reboot the server (if required).
+      ansible.builtin.reboot:
+      when: reboot_required_file.stat.exists == true
+
+    - name: Remove dependencies that are no longer required.
+      ansible.builtin.apt:
+        autoremove: yes      
